--- a/test/behat/behat.yml
+++ b/test/behat/behat.yml
@@ -2,14 +2,18 @@
 default:
   suites:
     default:
+      mink_javascript_session: selenium
       contexts:
         - FeatureContext
-        - Behat\MinkExtension\Context\MinkContext
 
   extensions:
+    DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
     Behat\MinkExtension:
-      base_url:  'http://localhost:1981'
-      sessions:
-        default:
-          goutte: ~
+        browser_name: chrome
+        base_url: http://localhost:8002
+        sessions:
+            default:
+                chrome:
+                  api_url: http://localhost:9222
+
 
